chore: update env

--- a/.env.example
+++ b/.env.example
@@ -126,3 +126,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+BITRIX24_CLIENT_ID=local.6686fe7ae23103.45528633
+BITRIX24_CLIENT_SECRET=rkLeYrQN0BiccwQa9wpdB1nPGT4EvHvZzrZ8kbs83wJuFoMDBt
+BITRIX24_REDIRECT_URI=https://fb09-189-4-123-251.ngrok-free.app
+BITRIX24_BASE_URL=https://b24-rchrgb.bitrix24.com.br
+
+# COMPANY_REPOSITORY_TYPE=Bitrix24CompanyRepository
